# xml-stringify

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: Cargo.toml  xml.rs
src/: lib.rs  parser.rs  values.rs
tests/: ehf.rs  expected.txt  visma.rs  visma.xml
