[package]
name = "xml_stringify"
version = "0.1.1"
authors = ["Carl Fredrik Samson <cf@samson.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[workspace]
members = ["benches"]


[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
incremental = false
codegen-units = 16
rpath = false

[profile.test]
opt-level = 3
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
rpath = false